{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 9,
  "lineage": "54128b58-d328-37d1-8758-5a1590444a78",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852972139078:security-group/sg-0561ec1a19689d3ad",
            "description": "Security group for EKS cluster mykubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0561ec1a19689d3ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-cluster-sg-mykubernetes",
            "name_prefix": "",
            "owner_id": "852972139078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg-mykubernetes"
            },
            "tags_all": {
              "Name": "eks-cluster-sg-mykubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a759310647bd71cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852972139078:security-group/sg-0429b0adeaa25b67f",
            "description": "Security group for EKS worker nodes mykubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0429b0adeaa25b67f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-worker-sg-mykubernetes",
            "name_prefix": "",
            "owner_id": "852972139078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-sg-mykubernetes"
            },
            "tags_all": {
              "Name": "eks-worker-sg-mykubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a759310647bd71cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852972139078:vpc/vpc-0dbcb1ae3c8745a27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-051e3de9605d0c3ca",
            "default_route_table_id": "rtb-048b55c7696ce3f90",
            "default_security_group_id": "sg-0bf119fd06a777189",
            "dhcp_options_id": "dopt-00358b4db7e62bcf8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbcb1ae3c8745a27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048b55c7696ce3f90",
            "owner_id": "852972139078"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}